Add Rainy Hearts font

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Rainy Hearts";
+  src: url("./assets/rainyhearts.ttf") format("truetype");
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -12,6 +17,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.display {
+  font-family: 'Rainy Hearts', monospace;
+  font-size: 2rem;
 }
 
 .container {
